# GStreamer-Video-Recorder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
